--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,9 +29,4 @@ jobs:
     - run: npm install
     - run: npm run build
     - run: npm run test:unit
-    - name: Cypress run
-      uses: cypress-io/github-action@v5
-      with:
-        build: npm run build
-        start: npm run test:e2e
-        browser: chrome
+    - run: npm run test:e2e
