--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,6 +31,7 @@ jobs:
     - run: npm run test:unit
     - run: npm run test:e2e
   notify_failture:
+    needs: build
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
@@ -60,6 +61,7 @@ jobs:
           sudo rm -r /var/www/coypos/*
           sudo cp -r /srv/coypos-ui/dist/* /var/www/coypos/
   notify_failture2:
+    needs: deploy
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
