--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,14 +11,12 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    continue-on-error: true
     strategy:
       matrix:
         node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -44,6 +42,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    continue-on-error: true
     steps:
     - name: Deploy using ssh
       uses: appleboy/ssh-action@master
