--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,10 +30,10 @@ jobs:
     - run: npm run test:e2e
   notify_failture:
     needs: build
+    if: ${{ always()&& needs.build.result == 'failure'}}
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
-      if: always()&& needs.build.result == 'failure'
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       uses: Ilshidur/action-discord@master
@@ -42,7 +42,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: needs.build.result == 'success'
+    if: ${{needs.build.result == 'success"}}
     continue-on-error: true
     steps:
     - name: Deploy using ssh
@@ -62,10 +62,10 @@ jobs:
           sudo cp -r /srv/coypos-ui/dist/* /var/www/coypos/
   notify_failture2:
     needs: deploy
+    if: always() && needs.deploy.result == 'failure'
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
-      if: always() && needs.deploy.result == 'failure'
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       uses: Ilshidur/action-discord@master
