--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -42,7 +42,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: ${{needs.build.result == 'success"}}
+    if: ${{needs.build.result == 'success' }}
     continue-on-error: true
     steps:
     - name: Deploy using ssh
