--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,9 +28,9 @@ jobs:
     - run: npm run build
     - run: npm run test:unit
     - run: npm run test:e2e
-  notify_failture:
+  notify_failure:
     needs: build
-    if: ${{ always()&& needs.build.result == 'failure'}}
+    if: ${{ always() && contains(needs.*.result, 'failure') }}
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
@@ -42,7 +42,7 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
-    if: ${{needs.build.result == 'success' }}
+    if: ${{ always() && contains(needs.*.result, 'success') }}
     continue-on-error: true
     steps:
     - name: Deploy using ssh
@@ -60,9 +60,9 @@ jobs:
           npm run build
           sudo rm -r /var/www/coypos/*
           sudo cp -r /srv/coypos-ui/dist/* /var/www/coypos/
-  notify_failture2:
+  notify_failure2:
     needs: deploy
-    if: always() && needs.deploy.result == 'failure'
+    if: ${{ always() && contains(needs.*.result, 'failure') }}
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
@@ -73,7 +73,7 @@ jobs:
         args: '@everyone The project {{ EVENT_PAYLOAD.repository.full_name }} has error. Error on deploy step'
   notify_success:
     needs: deploy
-    if: needs.deploy.result == 'success'
+    if: ${{ always() && contains(needs.*.result, 'success') }}
     runs-on: ubuntu-latest
     steps:
     - name: Discord notification
