--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -48,14 +48,17 @@ jobs:
           npm run build
           sudo rm -r /var/www/coypos/*
           sudo cp -r /srv/coypos-ui/dist/* /var/www/coypos/
-  notify_success:
-    needs: deploy
+  notify:
+    name: Discord Notification
     runs-on: ubuntu-latest
+    needs:
+      - build
+      - deploy
+    if: ${{ always() }} # You always want to be notified: success, failure, or cancelled
+    
     steps:
-    - name: Discord notification
-      env:
-        DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
-      uses: Ilshidur/action-discord@master
-      with:
-        args: 'The project {{ EVENT_PAYLOAD.repository.full_name }} has been deployed.'
- 
+      - name: Notify
+        uses: nobrayner/discord-webhook@v1
+        with:
+          github-token: ${{ secrets.TOKEN }}
+          discord-webhook: ${{ secrets.DISCORD_WEBHOOK }}
