--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,7 +32,7 @@ jobs:
       uses: th0th/notify-discord@v0.4.1
       if: ${{ always() }}
       env:
-        DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK }}
         GITHUB_ACTOR: ${{ github.actor }}
         GITHUB_JOB_NAME: "Build and deploy"
         GITHUB_JOB_STATUS: ${{ job.status }}
@@ -60,7 +60,7 @@ jobs:
       uses: th0th/notify-discord@v0.4.1
       if: ${{ always() }}
       env:
-        DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK_URL }}
+        DISCORD_WEBHOOK_URL: ${{ secrets.DISCORD_WEBHOOK }}
         GITHUB_ACTOR: ${{ github.actor }}
         GITHUB_JOB_NAME: "Build and deploy"
         GITHUB_JOB_STATUS: ${{ job.status }}
