--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,6 +28,5 @@ jobs:
         cache: 'npm'
     - run: npm install
     - run: npm run build
-    - run: npm run test:unit
-    - run: npm run test:e2e
+    - run: npm run test
 
