--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "core-js": "^3.31.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
