--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.4.0",
+    "bootstrap": "^5.3.0",
     "core-js": "^3.31.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
