--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,8 +32,7 @@ jobs:
       env:
         DISCORD_WEBHOOK: ${{ secrets.DISCORD_WEBHOOK }}
       with:
-        args: tests/e2e/screenshots/test.cy.js/*.*
-        args: tests/e2e/videos/*
+        args: tests/e2e/screenshots/test.cy.js/*.* tests/e2e/videos/*
     - name: Notify discord
       uses: th0th/notify-discord@v0.4.1
       if: failure()
