migrate vuex to vue3-storage, added better language from link and storage resolve, more translate

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -70,6 +70,7 @@ jobs:
           echo VUE_APP_I18N_FALLBACK_LOCALE=en >> .env
           echo VUE_APP_API_URL=${{ secrets.API_URL }} >> .env
           echo VUE_APP_TOKEN=${{ secrets.API_SECRET }} >> .env
+          echo BASE_URL=https://smilginp.evolpe.net  >> .env
           npm install
           npm run build
           sudo rm -r /var/www/coypos/*
