--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.2.2",
-    "vuex": "^4.1.0"
+    "vue3-storage": "^0.1.11"
   },
   "devDependencies": {
     "@intlify/vue-i18n-loader": "^3.0.0",
@@ -29,7 +29,6 @@
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-typescript": "~5.0.0",
     "@vue/cli-plugin-unit-mocha": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
     "@vue/eslint-config-typescript": "^9.1.0",
     "@vue/test-utils": "^2.0.0-0",
