--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@types/bootstrap": "^5.2.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "core-js": "^3.31.0",
