--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "test": "vue-cli-service test:e2e --headless",
+    "test:unit": "vue-cli-service test:unit",
     "lint": "vue-cli-service lint",
     "i18n:report": "vue-cli-service i18n:report --src \"./src/**/*.?(js|vue)\" --locales \"./src/locales/**/*.json\""
   },
@@ -14,6 +15,7 @@
     "@types/bootstrap": "^5.2.6",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "chai": "^4.3.8",
     "core-js": "^3.31.0",
     "vue": "^3.3.4",
     "vue-i18n": "^9.2.2",
