--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@popperjs/core": "^2.11.8",
     "@types/bootstrap": "^5.2.6",
     "axios": "^1.4.0",
+    "axios-cache-interceptor": "^1",
     "bootstrap": "^5.3.0",
     "chai": "^4.3.8",
     "core-js": "^3.31.0",
