--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^5.3.0",
     "chai": "^4.3.8",
     "core-js": "^3.31.0",
+    "simple-keyboard": "^3.7.20",
     "vue": "^3.3.4",
     "vue-i18n": "^9.5.0",
     "vue-router": "^4.2.2",
