--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -68,6 +68,7 @@ jobs:
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.PRIVATE_KEY }}
         port: 2137
+        command_timeout: 200m
         script: |
           cd /srv/coypos-ui
           rm yarn.lock
